Restructured Folders And API, Added Group Features, Fixed Bugs
